fixed date bar alignment issue

--- a/src/components/addEvent.scss
+++ b/src/components/addEvent.scss
@@ -1,4 +1,4 @@
 #add-event{
   position:absolute;
-  top:1500px;
+  top:1728px;
 }
