--- a/src/components/dailyOutline/dailyOutline.scss
+++ b/src/components/dailyOutline/dailyOutline.scss
@@ -1,6 +1,6 @@
 #calendar-outline{
   position:absolute;
-  top:167px;
+  top:171px;
   width: 100%;
   border-top: 2px solid black;
 
