--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
   background-color: white;
   width: 100%;
   text-align: center;
-  z-index: 2;
+  z-index: 6;
 
   #logo-container{
     margin: 1em;
